src/styles/Deck.css
.cardsContainer {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-evenly;
	gap: 1vmin;
}

.infoContainer {
	display: flex;
	justify-content: space-between;
	gap: 8px;
}

.deck {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	gap: 1vmin;
	width: 100dvw;
}

